fixed word wrap

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,6 +17,8 @@
 }
 
 .longtitle {
-     word-break: break-all;
+     white-space: pre-wrap;
 }
+
+
 
